K8s/2.3/my-tls-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-tls-deployment
  labels:
    app: my-app-tls
  namespace: lesson2-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-tls
  template:
    metadata:
      labels:
        app: my-app-tls
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
          - name: my-tls-volume
            mountPath: "/usr/share/nginx/html"
      volumes:
      - name: my-tls-volume
        configMap:
          name: my-tls-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: my-tls-service
  namespace: lesson2-3
spec:
  ports:
    - name: port-nginx
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: my-app-tls
